# template-model

./: CMakeLists.txt  README.md  model.h  model_driver.c  model_main.c  model_map.c
cmake/: FindROSS.cmake
model/: CMakeLists.txt
