PROJECT(ROSS_TEST C)
CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

SET(ENABLE_ALL_WARNINGS OFF CACHE BOOL "")
SET(ENABLE_ASTYLE OFF CACHE BOOL "")
SET(ENABLE_CPPCHECK OFF CACHE BOOL "")
SET(ENABLE_DOCS OFF CACHE BOOL "")
SET(ENABLE_DOXYGEN OFF CACHE BOOL "")
SET(ENABLE_EXAMPLES OFF CACHE BOOL "")
SET(ENABLE_FRUIT OFF CACHE BOOL "")
SET(ENABLE_GIT OFF CACHE BOOL "")
SET(ENABLE_SPHINX OFF CACHE BOOL "")
SET(ENABLE_TESTS OFF CACHE BOOL "")
SET(ENABLE_UNCRUSTIFY OFF CACHE BOOL "")
SET(ENABLE_VALGRIND OFF CACHE BOOL "")

SET(ENABLE_MPI ON CACHE BOOL "")
INCLUDE(blt/SetupBLT.cmake)

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/")

FIND_PACKAGE(ROSS REQUIRED)
BLT_REGISTER_LIBRARY(NAME ROSS
  INCLUDES ${ROSS_INCLUDE_DIRS}
  LIBRARIES ${ROSS_LIBRARIES})

ADD_SUBDIRECTORY(model)
